--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo build:android",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-material/core": "^1.3.7",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "jest-expo": "^47.0.1",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "^0.70.5",
-    "react-native-material-textfield": "^0.16.1"
+    "react-native-material-textfield": "^0.16.1",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "jest": "^29.3.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
